--- a/BusinessKastaProject/styles/main.css
+++ b/BusinessKastaProject/styles/main.css
@@ -2377,9 +2377,9 @@ footer .hidden-lg{
 
 }
 @media (min-width: 1200px){
-  .container {
-    width: 49rem;
-  }
+  /*.container {*/
+    /*width: 49rem;*/
+  /*}*/
 }
 @media screen and (min-width: 1500px){
   .swiper-button-prev{
