--- a/BusinessKastaProject/styles/main.css
+++ b/BusinessKastaProject/styles/main.css
@@ -2377,9 +2377,7 @@ footer .hidden-lg{
 
 }
 @media (min-width: 1200px){
-  /*.container {*/
-    /*width: 49rem;*/
-  /*}*/
+
 }
 @media screen and (min-width: 1500px){
   .swiper-button-prev{
@@ -2387,6 +2385,9 @@ footer .hidden-lg{
   }
   .swiper-button-next{
     right: 30%;
+  }
+  .container {
+    width: 49rem;
   }
 }
 @media (min-width: 1100px) and (max-width: 1200px){
