--- a/Monticello/styles/main.css
+++ b/Monticello/styles/main.css
@@ -573,6 +573,9 @@ form button{
         font-size: 14px;
     }
     .container{
+        width: 14rem;
+    }
+    #contact .container-width{
         width: 100%;
     }
     .video p{
@@ -647,7 +650,6 @@ form button{
         width: 60%;
     }
 }
-
 @media only screen and (min-width: 32rem) {
     .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-offset-0, .col-sm-offset-1, .col-sm-offset-10, .col-sm-offset-11, .col-sm-offset-12, .col-sm-offset-2, .col-sm-offset-3, .col-sm-offset-4, .col-sm-offset-5, .col-sm-offset-6, .col-sm-offset-7, .col-sm-offset-8, .col-sm-offset-9 {
         box-sizing: border-box;
@@ -847,7 +849,6 @@ form button{
         order: 1
     }
 }
-
 @media (min-width: 660px){
     h2{
         font-size: 45px;
@@ -1111,7 +1112,13 @@ form button{
         font-family: "GothamProLight", sans-serif;
     }
 }
+@media (max-width: 800px){
+    .s-network{
+        height: 25px;
+        width: 17px;
+    }
 
+}
 @media (max-width: 768px){
     #gallery-container .pad-b-r-mobile {
         padding-top: 5px;
@@ -1119,19 +1126,12 @@ form button{
         padding-bottom: 0;
     }
 }
-@media (max-width: 510px){
+@media (max-width: 667px){
     #gallery-container .pad-b-r-mobile {
         padding-top: 0;
         padding-right: 0;
-        padding-bottom: 5px;
+        padding-bottom: 10px;
     }
-}
-@media (max-width: 800px){
-    .s-network{
-        height: 25px;
-        width: 17px;
-    }
-
 }
 @media (min-width: 1024px){
     .box-container{
