--- a/ArkeneaProject/styles/main.css
+++ b/ArkeneaProject/styles/main.css
@@ -315,6 +315,9 @@ a{
 .margin-top{
 	margin-top: 80px;
 }
+.swiper-slide{
+	width: 100%;
+}
 
 @media screen and (min-width: 768px){
 	.container {
