--- a/ArkeneaProject/styles/main.css
+++ b/ArkeneaProject/styles/main.css
@@ -562,9 +562,9 @@ a{
     }
 }
 @media screen and (min-width: 1098px) {
-	.container{
-		width: 60rem;
-	}
+	/*.container{*/
+		/*width: 60rem;*/
+	/*}*/
 	.module-form{
 		text-align: center;
 		margin-top: 75px;
