--- a/ArkeneaProject/styles/main.css
+++ b/ArkeneaProject/styles/main.css
@@ -801,6 +801,7 @@ a{
     }
     .module-header ul.menu .list {
         font-size: 10px;
+        padding: 0;
     }
 }
 @media (min-width: 1150px){
