change css in Arkenea

--- a/ArkeneaProject/styles/main.css
+++ b/ArkeneaProject/styles/main.css
@@ -680,6 +680,7 @@ a{
 	.card{
         margin: 40px auto 40px;
         position: relative;
+        padding: 0 80px;
     }
     .card-description{
     	font-size: 20px;
