--- a/ArkeneaProject/styles/main.css
+++ b/ArkeneaProject/styles/main.css
@@ -505,6 +505,11 @@ a{
     	padding: 0;
     }
 }
+@media (min-width: 768px) and (max-width:1200px){
+    .module-pictures .card {
+        width: 215px;
+    }
+}
 @media screen and (min-width: 1024px) {
 
     .container {
@@ -636,7 +641,7 @@ a{
 	}
 	.h1{
 		font-size: 60px;
-		letter-spacing: 0em;
+		letter-spacing: 0;
 		display: block;
 	}
 	.margin{
@@ -648,19 +653,19 @@ a{
 	.title{
 		font-size: 36px;
 		text-align: left;
-		padding: 0px;
+		padding: 0;
 	}
 	.block{
-		margin: 40px 0px 50px;
+		margin: 40px 0 50px;
 	}
 	.margin__{
-		margin-top: 0px;
+		margin-top: 0;
 	}
 	.center{
 		text-align: center;
 	}
 	.margin-top-form{
-		margin: 80px 0px;
+		margin: 80px 0;
 	}
 	.margin-top-main{
 		margin-top: 100px;
@@ -672,15 +677,15 @@ a{
 		display: block;
 	}
 	.h1-cover{
-		padding: 0px;
+		padding: 0;
 	}
 	.logo{
-		padding: 0px;
+		padding: 0;
 	}
 	.card{
         margin: 40px auto 40px;
         position: relative;
-        padding: 0 80px;
+        /*padding: 0 80px;*/
     }
     .card-description{
     	font-size: 20px;
