--- a/BusinessKastaProject/styles/main.css
+++ b/BusinessKastaProject/styles/main.css
@@ -2406,6 +2406,7 @@ footer .hidden-lg{
 @media (max-width: 670px){
     .header .h1 {
       font-size: 1.5rem;
+      text-align: center;
     }
 }
 
