--- a/FleeksBY/styles/main.css
+++ b/FleeksBY/styles/main.css
@@ -195,7 +195,11 @@ small{
   justify-content: center;
   display: flex;
 }
-
+@media (max-width: 412px){
+  .container {
+    width: 320px;
+  }
+}
 @media screen and (min-width: 412px){
 
   .container{
@@ -205,8 +209,6 @@ small{
     width: auto;
   }
 }
-
-
 @media screen and (min-width: 480px){
 
   .container{
@@ -217,7 +219,6 @@ small{
   }
 
 }
-
 @media screen and (min-width: 568px){
 
   .container{
@@ -228,7 +229,6 @@ small{
   }
 
 }
-
 @media screen and (min-width: 640px){
   .container{
     width: 25rem;
@@ -238,7 +238,6 @@ small{
   }
 
 }
-
 @media screen and (min-width: 732px){
 
   .container{
@@ -249,7 +248,6 @@ small{
   }
 
 }
-
 @media screen and (min-width: 1024px){
 
   .container{
@@ -260,7 +258,6 @@ small{
   }
 
 }
-
 @media screen and (min-width: 1200px){
 
   .container{
@@ -348,7 +345,6 @@ small{
   }
 
 }
-
 @media screen and (min-width: 1500px){
 
   .logo{
