change in facility

--- a/Facility/styles/main.css
+++ b/Facility/styles/main.css
@@ -287,6 +287,12 @@ h4{
     .swiper-button-prev_s_2{
         display: none;
     }
+    .container {
+        width: 315px;
+    }
+    .container.hidden-l.block-margin{
+        width: 12rem;
+    }
 }
 @media (min-width : 576px){
     .swiper-button-next_s_2,
