--- a/Facility/styles/main.css
+++ b/Facility/styles/main.css
@@ -282,7 +282,7 @@ h4{
     }
 }
 /* Small Devices, Tablets */
-@media (max-width : 576px){
+@media (max-width : 768px){
     .swiper-button-next_s_2,
     .swiper-button-prev_s_2{
         display: none;
@@ -294,12 +294,9 @@ h4{
         width: 12rem;
     }
 }
-@media (min-width : 576px){
-    .swiper-button-next_s_2,
-    .swiper-button-prev_s_2{
-        display: block;
-    }
-}
+/*@media (min-width : 576px){*/
+   /**/
+/*}*/
 @media only screen and (min-width : 768px) {
     h1{
         margin-bottom: 30px;
@@ -410,6 +407,10 @@ h4{
     }
     .swiper-button-prev_s_3{
         left: 220px;
+    }
+    .swiper-button-next_s_2,
+    .swiper-button-prev_s_2{
+        display: block;
     }
 }
 /* Medium Devices, Desktops */
