--- a/Facility/styles/main.css
+++ b/Facility/styles/main.css
@@ -297,9 +297,20 @@ h4{
         bottom: 105px;
     }
 }
-/*@media (min-width : 576px){*/
-   /**/
-/*}*/
+@media (max-width : 1500px){
+    .mini-slider .swiper-button-next_s_3 {
+        right: -5.5%;
+        top: 25%;
+    }
+    .mini-slider .swiper-button-prev_s_3 {
+        left: -5.5%;
+        top: 25%;
+    }
+    .mini-slider .swiper-button-next_s_3::before,
+    .mini-slider .swiper-button-prev_s_3::before{
+        height: 30px;
+    }
+}
 @media only screen and (min-width : 768px) {
     h1{
         margin-bottom: 30px;
