--- a/Facility/styles/main.css
+++ b/Facility/styles/main.css
@@ -299,11 +299,11 @@ h4{
 }
 @media (max-width : 1500px){
     .mini-slider .swiper-button-next_s_3 {
-        right: -40px;;
+        right: -40px;
         top: 25%;
     }
     .mini-slider .swiper-button-prev_s_3 {
-        left: -40px;;
+        left: -40px;
         top: 25%;
     }
     .mini-slider .swiper-button-next_s_3::before,
@@ -486,5 +486,12 @@ h4{
     .s_3{
         height: 300px;
     }
-
+    .mini-slider .swiper-button-next_s_3 {
+        right: -40px;
+        top: 25%;
+    }
+    .mini-slider .swiper-button-prev_s_3 {
+        left: -40px;
+        top: 25%;
+    }
 }
