--- a/Facility/styles/main.css
+++ b/Facility/styles/main.css
@@ -276,7 +276,7 @@ h4{
     width: 100%;
     height: 100%;
 }
-@media only screen and (min-width : 500px){
+@media (min-width : 500px){
     .popup{
         width: 300px;
     }
@@ -295,6 +295,11 @@ h4{
     }
     .s_2 .swiper-pagination-bullets{
         bottom: 105px;
+    }
+}
+@media (min-width : 768px){
+    .container {
+        width: 730px;
     }
 }
 @media (min-width : 514px) and (max-width:812px){
