change in facility

--- a/Facility/styles/main.css
+++ b/Facility/styles/main.css
@@ -310,11 +310,11 @@ h4{
 @media (max-width : 1500px){
     .mini-slider .swiper-button-next_s_3 {
         right: -40px;
-        top: 25%;
+        top: 105px;
     }
     .mini-slider .swiper-button-prev_s_3 {
         left: -40px;
-        top: 25%;
+        top: 105px;
     }
     .mini-slider .swiper-button-next_s_3::before,
     .mini-slider .swiper-button-prev_s_3::before{
