change in monticello

--- a/Monticello/styles/main.css
+++ b/Monticello/styles/main.css
@@ -653,7 +653,7 @@ form button{
         width: 60%;
     }
 }
-@media only screen and (min-width: 32rem) {
+@media (min-width: 32rem) {
     .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-offset-0, .col-sm-offset-1, .col-sm-offset-10, .col-sm-offset-11, .col-sm-offset-12, .col-sm-offset-2, .col-sm-offset-3, .col-sm-offset-4, .col-sm-offset-5, .col-sm-offset-6, .col-sm-offset-7, .col-sm-offset-8, .col-sm-offset-9 {
         box-sizing: border-box;
         -webkit-box-flex: 0;
@@ -1218,6 +1218,11 @@ form button{
     #contact .card{
         text-align: center;
         padding: 0 40px 60px 40px;
+    }
+}
+@media (max-width: 1200px){
+    header.header .wrap {
+        justify-content: center;
     }
 }
 @media (min-width: 1200px){
