--- a/ArkeneaProject/styles/main.css
+++ b/ArkeneaProject/styles/main.css
@@ -822,6 +822,9 @@ a{
     .container {
         width: 1240px;
     }
+    form.form .wrap{
+
+    }
 }
 @media screen and (min-width: 1400px){
 	.container{
