--- a/ArkeneaProject/styles/main.css
+++ b/ArkeneaProject/styles/main.css
@@ -318,6 +318,9 @@ a{
     height: 50px;
     font-size: 15px;
 }
+.module-form .form-control.form-textarea{
+    margin-top: 10px;
+}
 
 @media (min-width: 360px) and (max-width: 768px){
     .module-pictures .card{
