--- a/ArkeneaProject/styles/main.css
+++ b/ArkeneaProject/styles/main.css
@@ -613,7 +613,12 @@ a{
         height: 150px;
     }
 }
-@media screen and (min-width: 1098px) {
+@media (min-width: 900px) and (max-width: 1200px){
+    .container {
+        width: 900px;
+    }
+}
+@media (min-width: 1098px) {
 	/*.container{*/
 		/*width: 60rem;*/
 	/*}*/
