--- a/ArkeneaProject/styles/main.css
+++ b/ArkeneaProject/styles/main.css
@@ -785,7 +785,7 @@ a{
 	}
 	.form-textarea{
         display: block;
-        width: 440px;
+        width: 100%;
     }
     .form-btn{
         padding: 0 95px 0;
@@ -886,6 +886,7 @@ a{
     .form-control.form-input{
         width: 100%;
     }
+
 }
 @media screen and (min-width: 1300px){
     .container {
