change in monticello

--- a/ArkeneaProject/styles/main.css
+++ b/ArkeneaProject/styles/main.css
@@ -590,7 +590,8 @@ a{
 }
 @media (min-width: 768px){
 	.container{
-        width: 1045px;
+        /*width: 1045px;*/
+        width: 775px;
     }
 	.card-thumb{
 		height: 200px;
